[workspace]
resolver = "2"

members = ["cnvtr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
name = "bot-cnvtr"
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
itertools = "0.11"
indoc = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }

envy = "0.4"

tokio = { version = "1.29", features = ["full"] }
futures = "0.3"

axum = "0.7"
reqwest = { version = "0.11", features = ["json", "multipart"] }
hyper = "1.1"

traq-bot-http = { version = "0.8", features = ["uuid"] }

domain.path = "./domain"
usecases.path = "./usecases"
repository.path = "./repository"
traq-client.path = "./traq-client"
wh-handler.path = "./wh-handler"
bot.path = "./bot"
router.path = "./router"

[workspace.dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "uuid"]
