[workspace]
resolver = "2"

members = ["bot-cnvtr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
paste = "1.0"
itertools = "0.12"
indoc = "2.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
envy = "0.4"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
http = "1.0"
tower-http = { version = "0.5.1", features = ["trace"] }
hyper = "1.1"
tracing = "0.1"
traq-bot-http = { version = "0.8", features = ["uuid"] }

domain.path = "./domain"
usecases.path = "./usecases"
repository.path = "./infra/repository"
traq-client.path = "./infra/traq-client"
wh-handler.path = "./app/wh-handler"
bot.path = "./app/bot"
router.path = "./router"

[workspace.dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "uuid"]

[patch.crates-io]
teahook = { git = "https://github.com/H1rono/teahook-rs.git", branch = "main" }
github-webhook = { git = "https://github.com/H1rono/github-webhook-rs", branch = "dev" }
