[workspace]
resolver = "2"

members = ["./."]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
paste = "1.0"
itertools = "0.13"
indoc = "2.0"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
tokio.version = "1.39"
tokio.features = ["macros", "rt-multi-thread", "tracing", "signal", "time"]
futures = "0.3"
http = "1.1"
tracing = "0.1"
traq-bot-http = { version = "0.9", features = ["uuid"] }

domain.path = "./domain"
usecases.path = "./usecases"
repository.path = "./infra/repository"
traq-client.path = "./infra/traq-client"
cron.path = "./cron"
wh-handler.path = "./app/wh-handler"
bot.path = "./app/bot"
router.path = "./router"

[workspace.lints.clippy]
pedantic.level = "deny"
pedantic.priority = 0

missing_errors_doc.level = "allow"
missing_errors_doc.priority = 1


[package]
name = "bot-cnvtr"
version.workspace = true
edition.workspace = true
publish.workspace = true
default-run = "bot-cnvtr"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
envy = "0.4"
dotenvy = "0.15"

tokio.workspace = true
tower-http = { version = "0.5.2", features = ["trace"] }
http.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
traq-bot-http.workspace = true

domain.workspace = true
usecases.workspace = true
repository.workspace = true
router.workspace = true
traq-client.workspace = true
cron.workspace = true
wh-handler.workspace = true
bot.workspace = true

[lints]
workspace = true


[patch.crates-io]
teahook = { git = "https://github.com/H1rono/teahook-rs.git", branch = "main" }
github-webhook = { git = "https://github.com/H1rono/github-webhook-rs", branch = "dev" }
