[package]
name = "bot-cnvtr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde_json.workspace = true
anyhow.workspace = true
envy.workspace = true
dotenvy = "0.15"

tokio.workspace = true
tower-http.workspace = true
http.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
traq-bot-http.workspace = true

domain.workspace = true
usecases.workspace = true
repository.workspace = true
router.workspace = true
traq-client.workspace = true
wh-handler.workspace = true
bot.workspace = true
