[package]
name = "bot-cnvtr"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
envy = "0.4"
dotenvy = "0.15"

tokio.workspace = true
tower-http.workspace = true
http.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
traq-bot-http.workspace = true

domain.workspace = true
usecases.workspace = true
repository.workspace = true
router.workspace = true
traq-client.workspace = true
wh-handler.workspace = true
bot.workspace = true
