[package]
name = "cnvtr"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
envy.workspace = true
dotenvy = "0.15"

tokio.workspace = true
axum.workspace = true

domain.workspace = true
usecases.workspace = true
repository.workspace = true
router.workspace = true
traq-client.workspace = true
wh-handler.workspace = true
