[package]
name = "config"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
itertools = { workspace = true }
indoc = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

dotenvy = { workspace = true }
envy = { workspace = true }
clap = { workspace = true }
shlex = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-recursion = { workspace = true }

axum = { workspace = true }
reqwest = { workspace = true }

traq-bot-http = { workspace = true }
traq = { workspace = true }
sqlx = { workspace = true }
