[package]
name = "repository"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
itertools.workspace = true
indoc.workspace = true
serde.workspace = true
uuid.workspace = true
envy.workspace = true

async-trait.workspace = true
sqlx.workspace = true

domain.path = "../domain"
usecases.path = "../usecases"
