[package]
name = "router"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
indoc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
axum.workspace = true

traq-bot-http.workspace = true
sqlx.workspace = true

domain.workspace = true
usecases.workspace = true
