[package]
name = "router"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
indoc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1"
http.workspace = true
axum.version = "0.7"
axum.default-features = false
axum.features = ["tokio", "http1", "matched-path", "tower-log", "tracing", "json"]

traq-bot-http.workspace = true

domain.workspace = true
usecases.workspace = true

[lints]
workspace = true
