[package]
name = "traq-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
indoc = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = { workspace = true }
async-recursion = { workspace = true }
reqwest = { workspace = true }
traq = { workspace = true }
