[package]
name = "traq-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
indoc.workspace = true
itertools.workspace = true
uuid.workspace = true
thiserror.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true

async-trait.workspace = true
reqwest.workspace = true
traq.workspace = true

domain.path = "../domain"
usecases.path = "../usecases"
