[package]
name = "traq-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
indoc.workspace = true
itertools.workspace = true
uuid.workspace = true
thiserror.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
traq = "0.1"

domain.workspace = true
usecases.workspace = true
