[package]
name = "usecases"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
indoc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
envy.workspace = true

clap.workspace = true
shlex.workspace = true

futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true

traq-bot-http.workspace = true
sqlx.workspace = true

domain.workspace = true
