[package]
name = "usecases"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
indoc.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
envy.workspace = true

clap = { version = "4.3", features = ["derive"] }
shlex = "1.1"

futures.workspace = true
async-stream = "0.3"

traq-bot-http.workspace = true
sqlx.workspace = true

domain.workspace = true
