[package]
name = "bot"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
indoc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
clap = { version = "4.5", features = ["derive"] }
shlex = "1.3"
tracing.workspace = true
futures.workspace = true
async-stream = "0.3"

traq-bot-http.workspace = true

domain.workspace = true
usecases.workspace = true
