[package]
name = "wh-handler"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
paste = "1.0"
indoc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
http.workspace = true
github-webhook = "0.5.1"

domain.workspace = true
usecases.workspace = true

[patch.crates-io]
github-webhook = { git = "https://github.com/H1rono/github-webhook-rs", branch = "dev" }
