[package]
name = "wh-handler"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
paste.workspace = true
indoc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
http.workspace = true
github-webhook = "0.6.0"
teahook = "0.1.0"

domain.workspace = true
usecases.workspace = true
