[package]
name = "repository"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
itertools.workspace = true
indoc.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true

domain.workspace = true
usecases.workspace = true

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "mysql", "migrate", "uuid"]
