[package]
name = "repository"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
itertools.workspace = true
indoc.workspace = true
serde.workspace = true
uuid.workspace = true
thiserror.workspace = true
futures.workspace = true

domain.workspace = true

[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "tls-rustls", "mysql", "macros", "migrate", "uuid"]

[lints]
workspace = true
