[package]
name = "traq-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "multipart"] }
traq = "0.1"

domain.workspace = true
