[package]
name = "traq-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
traq.version = "0.1"
traq.default-features = false
traq.features = ["rustls-tls"]

domain.workspace = true

[dependencies.reqwest]
version = "0.12"
default-features = false

[lints]
workspace = true
